[AH-915] parcel servlet docs