@@ -17,6 +17,15 @@ Assumes pre-installed:
        TABLESPACE = pg_default
        CONNECTION LIMIT = -1;
 
+## Create postgis extension for the database. 
+
+   (eg. in pgAdmin select oskaridb and in SQL window: *CREATE EXTENSION postgis;* ) 
+   - install postgis, if doesn't work (windows 7) (http://download.osgeo.org/postgis/windows/pg93/)
+   [detail docs](http://postgis.net/docs/postgis_installation.html#create_new_db_extensions)
+
+
+Now you are able to create tables with geometry fields.
+
 # Setting up Jetty Hightide 8.1.14
 
 1) Download http://dist.codehaus.org/jetty/jetty-hightide-8.1.14/
@@ -114,15 +123,26 @@ Assumes pre-installed:
     preparcel.user=admin
     preparcel.password=geoserver
 
+
+    #Url for print service (maplink) - same server as for GeoServer
+    service.print.maplink.json.url=http://127.0.0.1:8084/oskari-printout-backend-1.0.3-SNAPSHOT/imaging/service/thumbnail/maplinkjson
+    service.print.maplink.geojson.url=http://127.0.0.1:8084/oskari-printout-backend-1.0.3-SNAPSHOT/imaging/service/thumbnail/maplinkgeojson
+
+    #File path for temp pdf/png files
+    service.print.saveFilePath = {jetty.home}/webapps/root/print/
+
+
     ##############################
     # proxy services
     ##############################
     # adding property/parcel proxy
-    oskari.proxyservices = property, print, wfsquery
+    oskari.proxyservices = property, print
+
+    oskari.proxy.print.url=http://127.0.0.1:8084/oskari-printout-backend-1.0.3-SNAPSHOT/imaging/service/thumbnail/extent.jsonp
 
     oskari.proxy.property.url=https://ws.nls.fi/ktjkii/wfs/wfs
     oskari.proxy.property.header.Host=ws.nls.fi
-    oskari.proxy.property.header.Authorization=[setup auth header based on credentials]
+    oskari.proxy.property.header.Authorization=Basic cG9ydGFhbGk6UGFpa2thMjAxMQ==
     oskari.proxy.property.header.Content-Type=text/xml
 
     # Supported locales, comma separated and default first
@@ -207,3 +227,89 @@ This needs to be configured to an url responding to parcel loading
 The layer ids also need to be configured according to the system/configuration (oskari_maplayer table)
 
 # Add parcel editing support
+
+1) Install GeoServer http://geoserver.org/ (tested with 2.4.3)
+
+* Use unique port for GS  e.g. 8084 (not equal to Oskari Jetty run)
+*   If GS is already available, look guidelines in point 9) 
+
+
+2) Replace Geoserver data directory, add OskariMarkFactory extension and start GeoServer (GS)
+
+* Replace {geoserver}\data_dir with oskari\oskari-server\content-resources\config\geoserver\data
+* Start GeoServer {geoserver}\bin\startup
+* Check data configuration with GS admin  (**http://localhost:8084/geoserver/web** --> layer preview layers my_places and my_places_categories ! these are empty in the initial  state)
+* Restart GS 
+
+3) Set GS layer configurations for preparcel and preparcel_data tables 
+
+* Use GS Admin (see below section **Details for GeoServer configuration**).
+
+# Add print service support
+
+1) Build  oskari_server/servlet-printout ( mvn clean install) and copy oskari-printout-backend-1.0.x-SNAPSHOT.war from target path to {jetty.home}/webapps path 
+
+2) Copy default.properties somewhere under {jetty.home}/resources/oskari-printout-backend.properties and modify/check url values 
+
+3) Add to GeoServer startup.bat -Dfi.nls.oskari.imaging.config={jetty.home}/resources/oskari-printout-backend.properties 
+
+Sample startup.bat 
+call "C:\Program Files (x86)\Java\jdk1.6.0_18\bin\java.exe" -DGEOSERVER_DATA_DIR="C:\Omat\GeoServer_2_4_0\data_dir" -Xmx512m -XX:MaxPermSize=128m -DSTOP.PORT=8079 -DSTOP.KEY=geoserver -Djetty.port=8084 -Dhttp.proxyHost=wwwp.nls.fi -Dfi.nls.oskari.imaging.config={jetty.home}/resources/oskari-printout-backend.properties -Dhttp.proxyPort=800 -Dhttp.nonProxyHosts="*.nls.fi|*.paikkatietoikkuna.fi|127.0.0.1|*.*.nls.fi"  -Djetty.logs="C:\Omat\GeoServer_2_4_0\logs" -jar "C:\Omat\GeoServer_2_4_0\start.jar"
+
+
+4) Restart GeoServer
+
+
+## Sample printout properties file
+
+layersURL=http://127.0.0.1:8080/oskari-map?action_route=GetMapLayers&lang=fi
+layer.urlTemplate.wmslayer=%2$s%3$s
+layer.urltemplate.myplaces=http://127.0.0.1:8084/geoserver/wms?myCat=%1$s&ID=myplaces_%1$s
+layer.urltemplate.myplaces.layers=oskari:my_places_categories
+layer.credentials.myplaces=
+layer.urltemplate.wfslayer=http://127.0.0.1:8080/oskari-map?action_route=GET_PNG_MAP&flow_pm_wfsLayerId=%1$s
+layer.urltemplate.statslayer=http://localhost/dataset/statslayer/service/actionroute
+layer.cache.exclude=90,91,250
+layer.tiles.url.whitelist=^http:\\/\\/(www|demo|static|cdn)\\.paikkatietoikkuna\\.fi\\/.+$|^http:\\/\\/(a|b|c|d)\\.karttatiili\\.fi\\/.+$|^http:\\/\\/karttatiili\\.fi\\/.+$|^data:image\\/png;base64,.+$|^data:image\\/jpeg\\;base64,.+|^/web\\/.+$
+layer.timeout.seconds=32
+geojson.debug=true
+
+
+# Details for GS configuration : 
+
+* Open geoserver admin tool (eg. localhost:8084/geoserver) Default admin = admin,  pw = geoserver.
+* Create new workspace *oskari*, if not . Set it as default and enable WFS and WMS services. Set namespace URI: (eg. http://www.oskari.org)
+* Add your database as a new postgis store
+    * Store->Add new Store->PostGIS
+    * Select *oskari* as workspace and name the data source: "my_places_categories" 
+    * Check it as Enabled
+    * Set the connection parameters, for example: 
+        * host: localhost, port: 5432
+        * database: oskaridb, schema: public
+        * user: *username*, passwd: *password* (this sample default postgres/postgres)
+* Add layers preparcel, preparcel_data
+    * Layers->Add a new resource->Add layer from "ows:my_places_categories"
+    * Publish preparcel (no geometry field )
+        * Set Declared SRS (eg. EPSG:3067)
+        * Set Native bbox (50 000, 6400000, 800000, 8000000)
+        * Set Lat/Lon Bounding Box (eg. press compute from native bounds)
+        * Publishing->Set Default Style (e.g. "Polygon") (no matter what)
+        * Save
+    * Publish preparcel_data :
+        * Set Declared SRS (eg. EPSG:3067)
+        * Set Native bbox (50 000, 6400000, 800000, 8000000)
+        * Set Lat/Lon Bounding Box (eg. press compute from native bounds)
+        * Publishing->Set Default Style (e.g. "MyPlacesSampleStyle") (not used)
+        * Save
+    * Publish my_places_categories:
+        * Set Declared SRS (eg. EPSG:3067)
+        * Set Lat/Lon Bounding Box (eg. press compute from native bounds)
+        * Publishing->Set Default Style (e.g. "MyPlacesSampleStyle") (used for rendering in Oskari)
+        * Save
+* Set Security items for data / Add new rule
+  e.g.
+
+          *.*.r                     *
+          oskari.prepracel.w       *
+          oskari.preparcel_data.w        *
+          
